# covidcast-indicators

./: .bumpversion.cfg  .dockerignore  .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  pyproject.toml
_delphi_utils_python/: .bumpversion.cfg  .pylintrc  DEVELOP.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
_delphi_utils_python/data_proc/geomap/: 03_20_MSAs.xls  COUNTY_ZIP_032020.xlsx  README.md  USDA_2015_fips_changes.csv  ZIP_COUNTY_032020.xlsx  cbsatocountycrosswalk.csv  chng_county_groups.csv  consistency_checks.ipynb  geo_data_proc.py  geo_utility_demonstration.ipynb  hhs.txt  lowpop_county_groups.csv  mapping.csv  source-file-sanity-check.ipynb  transHRRToMSA.csv  transStateToHRR.csv  zip_pop_filling.csv
_delphi_utils_python/delphi_utils/: __init__.py  __main__.py  archive.py  backfill_profiler.py  covidcast_port.py  covidcast_wrapper.py  date_utils.py  export.py  geomap.py  logger.py  nancodes.py  runner.py  signal.py  slack_notifier.py  smooth.py  testing.py  utils.py  weekday.py
_delphi_utils_python/delphi_utils/data/: fips_hhs_table.csv  fips_hrr_cross.csv  fips_hrr_table.csv  fips_msa_cross.csv  fips_msa_table.csv  fips_pop.csv  fips_state_table.csv  fips_zip_cross.csv  fips_zip_table.csv  geo_data_proc.py  hhs_pop.csv  jhu_fips_cross.csv  jhu_uid_fips_cross.csv  jhu_uid_fips_table.csv  nation_pop.csv  state_code_hhs_region_number_table.csv  state_code_hhs_table.csv  state_codes.csv  state_codes_table.csv  state_pop.csv  zip_fips_cross.csv  zip_fips_cross_2020.csv  zip_fips_table.csv  zip_hhs_table.csv  zip_hrr_cross.csv  zip_hsa_cross.csv  zip_msa_table.csv  zip_pop.csv  zip_state_code_table.csv
_delphi_utils_python/delphi_utils/flagging/: Makefile  PLANS.md  README.md  REVIEW.md  __init__.py  flag_from_api.py  flag_io.py  generate_ar.py  generate_reference.py  params.json.template  run.py
_delphi_utils_python/delphi_utils/flash_eval/: README.md  REVIEW.md  __init__.py  __main__.py  constants.py  eval_day.py  params.json.template  run.py
_delphi_utils_python/tests/: params.json.template  test-covidcast-port.py  test_archive.py  test_backfill_profiler.py  test_covidcast_wrapper.py  test_export.py  test_geomap.py  test_runner.py  test_signal.py  test_smooth.py  test_utils.py  test_weekday.py
nhsn/: DETAILS.md  params.json.template  pyproject.toml  setup.py
nhsn/delphi_nhsn/: __main__.py  constants.py  patch.py  pull.py  run.py
nhsn/notebook/: analysis.ipynb
nhsn/tests/: conftest.py  test_patch.py  test_pull.py  test_run.py
(+7055 files in other folders)
