[build-system]
requires = ["setuptools", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delphi_nhsn"
version = "0.1.0"
description = "Indicators NHSN Hospital Respiratory Data"
readme = "README.md"
requires-python = "== 3.8.*"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "delphi-utils",
    "numpy",
    "pandas>=1.1.0",
    "sodapy",
    "epiweeks"
]

[project.urls]
Homepage = "https://github.com/cmu-delphi/covidcast-indicators"

[project.optional-dependencies]
dev = [
    "darker[isort]~=2.1.1",
    "pylint==2.8.3",
    "pytest",
    "pydocstyle",
    "pytest-cov",
    "mock",
    "moto~=4.2.14",
    "requests-mock",
    "freezegun",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
